[B][COLOR=FFFF8C00]BUILD 6.1.6 - RELEASE DATE 02/09/2015[/COLOR][/B]

Improved:  Fixed video views for Video Addons so they are properly displayed with fanart
Fixed:  Replaced Right List View with improved version
Fixed:  Restored Panel View for Movies, TV Shows and Music Videos to Gotham behavior when cases are not used
Fixed:  Addon browser will now properly display addon status (enabled/disabled/downloading)
Added:  New radio button in Panel View / View Options (top menu) for Music Videos (Concerts: Big Icon when selected will give 6.1.5 style larger icons for Music Videos regardless of "use cases".  Un-selected will give Gotham performance.)

[B][COLOR=FFFF8C00]BUILD 6.1.5 - RELEASE DATE 01/25/2015[/COLOR][/B]

Added:  Support for TV Channels and Guide dialog from full screen video OSD
Added:  Radio is now available as a menu item with DPG, Recordings, and Timers
Added:  Song Info dialog now displays song file path 
Added:  New radiobutton option in top menu to change navigation in TV guide timeline to wrap from top channel to bottom of list vice current open top menu
Added:  PVR recordings Prefs now supports NextPvr addon
Improved:  Support for Radio in PVR windows
Improved:  Layout and display of the TV Channel and Guide OSD dialogs
Improved:  Custom home menu now shows TV / Radio as "category" for custom menus
Improved:  Video thumb size in Panel View when media cases not used
Fixed:  Skin Widgets label display positioning
 


[B][COLOR=FFFF8C00]BUILD 6.1.4 - RELEASE DATE 12/18/2014[/COLOR][/B]

Improved:  Video source content settings dialog allows better navigation/scraper settings fixed
Improved:  Virtual keyboard shows shiftlock/capslock/symbols status (radiobutton)
Improved:  Addon browser now provides "hide foreign" filter
Improved:  "Live TV" menu is now "TV" (same as confluence)
Added:  The PVR EPG now has "view setting" top menu to add/display Now/Next/Channel EPG views
Added:  PVR sort/direction/group options
Added:  PVR Recordings views
