@@ -1,3 +1,15 @@
+[B][COLOR=FFFF8C00]BUILD 6.1.7 - RELEASE DATE 03/05/2015[/COLOR][/B]
+
+Added:  Live TV EPG is now available to be added to the main menu via customize main menu
+Added:  Weather widgets and MyWeather now supports Yahoo! Weather  (current, 36 hour views)
+Added:  CoverFlow view now available for program addons
+Improved:  Addon TV.Show.Next.Aired widgets now work for live TV main menu
+Improved:  Addon TV.Show.Next.Aired now requries ver 6.0.10 (minimum) and no longer is run at skin startup
+Improved:  In the music m3u playlist editor dialog, button label has been changed from "CLOSE" to "CLEAN" (when this button is clicked, the list of playlist music files is cleared)
+Fixed:  Recording Preferences dialog window focus issues when PVR client is pvr.npvr (Next PVR)
+Improved:  On home window, when library status bar is displayed for movies, concerts, and favoristes the label "Movies", "concerts", or "widgets" is displayed as appropriate
+
+
 [B][COLOR=FFFF8C00]BUILD 6.1.6 - RELEASE DATE 02/09/2015[/COLOR][/B]
 
 Improved:  Fixed video views for Video Addons so they are properly displayed with fanart
